fixed overflow of imgs

--- a/src/components/Episode/Episode.scss
+++ b/src/components/Episode/Episode.scss
@@ -10,7 +10,8 @@
   justify-content: space-between;
 
   .link {
-    width: 100%;
+    max-width: 100%;
+    overflow: hidden;
 
     .wrapper {
       position: relative;
